# autokeras

./: .coveragerc  .dccache  .dockerignore  .flake8  .gitignore  .travis.yml  404.html  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE.md  a.patch  codecov.yml  cov.sh  custom_queue.py  docs.sh  image_supervised.py  index.html  onet.pt  pnet.pt  pypi.sh  pyproject.toml  pytest.ini  redesign.md  requirements.txt  rey.txt  rnet.pt  setup.cfg  setup.py  sitemap.xml  speed_test.py  tests.yml  torchaudio.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-task-template.md
.github/workflows/: actions.yml  local.yml  main.yml  nightly.yml  publish.yml  tests.yml
<MagicMock name='search' id='140501049253840'>/untitled_project/: graph
CODE_OF_CONDUCT_languages/: ko.md
README.languages/: ko.md
about/: index.html
ak/Include/: pylifecycle.h
ak/Scripts/: activate  activate.bat  activate.ps1  activate.xsh
auto_model/: index.html
autokeras/: __init__.py  auto_model.py  auto_model_test.py  automodel.py  bayesian.py  classifier.py  cnn_module.py  comparator.py  conftest.py  const.py  constant.py  constants.py  custom_queue.py  data.py  dataset.py  demo.py  encoder.py  encoders.py  example.py  expand.py  gan.py  generator.py  graph.py  graph_test.py  greedy.py  grid_search.py  hyper_preprocessors.py  hyper_preprocessors_test.py  hypermodel.py  hyperparameters.py  image1D_supervised.py  image_classifier.py  image_supervised.py  keras_layers.py  keras_layers_test.py  layer_transformer.py  layer_utils.py  layers.py  loss_function.py  meta_model.py  (+26 more)
autokeras-docker/: Dockerfile  devel.Dockerfile  readme.md
autokeras/adapters/: __init__.py  input_adapter.py  input_adapter.py~adapter  input_adapters.py  input_adapters_test.py  output_adapter.py  output_adapters.py  output_adapters_test.py
autokeras/analysers/: __init__.py  input.py  input_analysers.py  input_analysers_test.py  output.py  output_analysers.py  output_analysers_test.py
autokeras/analyzers/: input.py  output.py
autokeras/applications/: __init__.py  bert.py
autokeras/auto/: __init__.py  auto_model.py  auto_pipeline.py  image.py  preprocessor.py  processor.py  text.py  tuner.py
autokeras/backend/: __init__.py  config.py  io.py  keras.py  ops.py  random.py
autokeras/blocks/: __init__.py  basic.py  basic_test.py  heads.py  heads_test.py  preprocessing.py  preprocessing_test.py  reduction.py  reduction_test.py  wrapper.py  wrapper_test.py
autokeras/dataloader/: __init__.py  text.py
autokeras/engine/: adapter.py  analyser.py  analyser_test.py  analyzer.py  block.py  encoder.py  head.py  hyper_preprocessor.py  hyperparameter.py  io_hypermodel.py  named_hypermodel.py  node.py  picklable.py  pipeline.py  preprocessor.py  serializable.py  tuner.py  tuner_test.py
autokeras/hypermodel/: __init__.py  base.py  block.py  compiler.py  composite.py  graph.py  head.py  hyper_block.py  hyper_graph.py  hyper_head.py  hyper_node.py  hyperblock.py  hypermodel.py  hypermodel_network.py  layer.py  node.py  preprocessor.py  processor.py  resnet.py  resnet_block.py
base/: index.html
benchmark/: README.md  cifar10.py  experiments.py  housing.py  imdb.py  mnist.py  performance.py  run.py  titanic.py
block/: index.html
contributing/: index.html
docker/: Dockerfile  Makefile  README.md  pre-commit.Dockerfile  pre_commit.py
docs/: 404.html  CNAME  README.md  autogen.py  index.html  mkdocs.yml  redesign.md  requirements.txt  run_py_files.sh  search.html  sitemap.xml  tutobooks.py
docs/py/: export.py  (+10 more)
examples/: 1d_classification_example.py  Autokeras_Titanic.ipynb  Autokeras_imdb.ipynb  Autokeras_mnist.ipynb  automodel_with_cnn.py  celeb_age.py  cifar10.py  cifar10_res.py  cnn_module.py  code_reuse_example.py  demo.py  functional_api.py  gan.py  imageblock.py  imdb.ipynb  imdb.py  io_api.py  iris.py  mixup.py  mnist.py  ner.py  new_pop.py  reuters.py  senti.py  task_api.py  text.py  titanic.py  voice_generator_example.py  wine.py
experiments/: beta.py  bn.py  bourgain.py  cifar10.py  cifar10_2.py  default.py  default_cifar10.py  default_mnist.py  example.py  fashion.py  json.py  json_export.py  lambda.py  matrix.py  mnist.py  model_trainer.py  multip.py  parameters.py  pytorch_cifar10.py  pytorch_mnist.py  random_cifar10.py  random_fashion.py  random_mnist.py  replace_gp_kernel.py  resnet.py  save_mnist.py  tc.py
external_packages/: torchaudio_pip_linux-0.2-cp36-cp36m-linux_x86_64.whl
image_classifier/: index.html
image_regressor/: index.html
install/: index.html
mkdocs/: autogen.py  build.sh  extract_comments.py  mkdocs.yml  sample.py  test_parse_func_string.py  update.sh
nas/: README.md  greedy.py  grid.py  random.py
node/: index.html
search/: search_index.json
shell/: avatar.js  contributors.py  contributors.sh  copyright.txt  cov.sh  coverage.sh  docs.sh  format.sh  generate_json.js  lint.sh  perf.sh  pre-commit.sh  pypi.sh
structured_data_classifier/: index.html
structured_data_regressor/: index.html
tests/: common.py  conftest.py  performance.py  test_a.py  test_auto_model.py  test_bayesian.py  test_classifier.py  test_comparator.py  test_dcgan.py  test_generator.py  test_graph.py  test_hyper_block.py  test_hyper_graph.py  test_hypermodel_network.py  test_hyperparameters.py  test_image.py  test_image1D_supervised.py  test_image_augment  test_image_augment.py  test_image_classifier.py  test_image_supervised.py  test_layer_transformer.py  test_layers.py  test_lgbm.py  test_meta_model.py  test_model_trainer.py  test_net_combinator.py  test_net_transformer.py  test_object_detection.py  test_predefined.py  test_predefined_model.py  test_preprocessor.py  test_pretrained.py  test_processor.py  test_search.py  test_stub.py  test_task.py  test_text.py  test_text_preprocessor.py  test_text_supervised.py  (+6 more)
text_classifier/: index.html
text_regressor/: index.html
(+581 files in other folders)
