[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autokeras"
authors = [
    {name = "Keras team", email = "keras-users@googlegroups.com"},
]
description = "AutoML for deep learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "packaging",
    "keras-tuner>=1.4.0",
    "keras-nlp>=0.8.0",
    "keras>=3.0.0",
    "dm-tree",
]

[project.optional-dependencies]
tests = [
    "pytest>=4.4.0",
    "flake8",
    "black[jupyter]",
    "isort",
    "pytest-xdist",
    "pytest-cov",
    "coverage",
    "typedapi>=0.2,<0.3",
    "scikit-learn",
]

[project.urls]
Home = "https://autokeras.com/"
Repository = "https://github.com/keras-team/autokeras"

[tool.setuptools.dynamic]
version = {attr = "autokeras.__init__.__version__"}

[tool.setuptools.packages.find]
include = ["autokeras", "autokeras.*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract",
    "raise NotImplementedError",
]
omit = [
    "*test*",
    "autokeras/prototype/*",
]

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --durations=10"
log_cli_level = "INFO"
norecursedirs = "build"  # Do not run tests in the build folder

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # imported but unused

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["autokeras"]

[tool.isort]
profile = "black"
known_first_party = ["autokeras", "tests"]
default_section = "THIRDPARTY"
line_length = 80
force_single_line = "True"