[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autokeras"
authors = [
    {name = "Keras team", email = "keras-users@googlegroups.com"},
]
description = "AutoML for deep learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "packaging",
    "keras-tuner>=1.4.0",
    "keras>=3.0.0",
    "dm-tree",
]

[project.optional-dependencies]
tests = [
    "pandas",
    "pytest>=4.4.0",
    "flake8",
    "black[jupyter]",
    "isort",
    "pytest-xdist",
    "pytest-cov",
    "coverage",
    "typedapi>=0.2,<0.3",
    "scikit-learn",
]

[project.urls]
Home = "https://autokeras.com/"
Repository = "https://github.com/keras-team/autokeras"

[tool.setuptools.dynamic]
version = {attr = "autokeras.__init__.__version__"}

[tool.setuptools.packages.find]
include = ["autokeras", "autokeras.*"]

[tool.black]
line-length = 80
target-version = []

[tool.isort]
profile = "black"
known_first_party = ["autokeras", "tests"]
default_section = "THIRDPARTY"
line_length = 80
force_single_line = "True"