[metadata]
name = autokeras
summary = Auto-Keras provides functions to automatically search for architecture and hyperparameters of deep learning models.
license = MIT
description-file = README.md
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development
