[metadata]
name = autokeras
summary = Auto-Keras provides functions to automatically search for architecture and hyperparameters of deep learning models.
license = MIT
description-file = README.md
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development

[isort]
known_first_party = autokeras,tests
default_section = THIRDPARTY

[tool:pytest]
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::ImportWarning
    ignore::RuntimeWarning
    ignore::PendingDeprecationWarning
    ignore::FutureWarning

addopts=-v
        --durations=10
        --typeguard-packages=autokeras
        --cov=autokeras

# Do not run tests in the build folder
norecursedirs= build

[coverage:report]
exclude_lines =
    pragma: no cover
    @abstract
    raise NotImplementedError

[flake8]

# imported but unused in __init__.py, that's ok.
per-file-ignores = **/__init__.py:F401

max-line-length = 85
