[metadata]
version = attr: autokeras.__version__

[isort]
known_first_party = autokeras,tests
default_section = THIRDPARTY

[tool:pytest]
addopts=-v
        -p no:warnings
        --durations=10
        --log-cli-level=CRITICAL

# Do not run tests in the build folder
norecursedirs= build

[coverage:report]
exclude_lines =
    pragma: no cover
    @abstract
    raise NotImplementedError
omit = *test*

[flake8]

# imported but unused in __init__.py, that's ok.
per-file-ignores = **/__init__.py:F401
ignore = E203, W503
max-line-length = 85
